--- a/sierpinski/index.html
+++ b/sierpinski/index.html
@@ -1,14 +1,19 @@
 <html>
+
 <head>
-  <script language="javascript" type="text/javascript" src="../p5.js"></script>
-  <!-- uncomment lines below to include extra p5 libraries -->
-	<!--<script language="javascript" src="../addons/p5.dom.js"></script>-->
-  <!--<script language="javascript" src="../addons/p5.sound.js"></script>-->
-  <script language="javascript" type="text/javascript" src="sketch.js"></script>
-  <!-- this line removes any default padding and style. you might only need one of these values set. -->
-  <style> body {padding: 0; margin: 0;} </style>
+	<!-- p5js -->
+	<script language="javascript" type="text/javascript" src="../p5.min.js"></script>
+  	<!--<script language="javascript" src="../addons/p5.dom.js"></script>-->
+  	<!--<script language="javascript" src="../addons/p5.sound.js"></script>-->
+  
+  	<!-- Sierpinski -->
+  	<script language="javascript" type="text/javascript" src="sierpinski.js"></script>
+	<link rel="stylesheet" type="text/css" href= "style.css">
 </head>
 
 <body>
+	<!-- container is centered with css -->
+	<div id = 'canvasCont'></div>
 </body>
+
 </html>
